--- a/app/scss/components/main-component.scss
+++ b/app/scss/components/main-component.scss
@@ -1,3 +1,5 @@
+@use "../utilities" as *;
+
 .container {
   position: relative;
   height: 100vh;
@@ -84,7 +86,7 @@
   }
 }
 
-@media (max-width: 35em) {
+@include breakpoint-down(small) {
   .cart {
     display: none;
   }
